tooling/nargo_cli/tests/snapshots/execution_success/regression_8558/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(v1: u16, v2: bool) -> pub u8 {
    if v2 {
        (v1 - 257) as u8
    } else {
        0
    }
}
