tooling/nargo_cli/tests/snapshots/execution_success/regression_8558/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u16, v1: u1):
    (no terminator instruction)
}
[regression_8558] Circuit output: 0
